--- a/Silksong release countdown.html
+++ b/Silksong release countdown.html
@@ -5,7 +5,7 @@
   </head>
 
   <body style="text-align: center">
-    <link rel="stylesheet" href="./Silksong release countdown_files/styles.css">
+    <link rel="stylesheet" href="styles.css">
 
     <div class="content">
       <img src="./Silksong release countdown_files/TITLE.png" class="logo">
@@ -57,7 +57,7 @@
       <br>
       <footer class="foot">
         Made by
-        <a class="link" href="https://twitter.com/PharloomMathGuy">@PharloomMathGuy</a>
+        <a class="link" href="https://store.steampowered.com/app/1030300/Hollow_Knight_Silksong/">steam silksong</a>
         on Twitter
         <br>
         All art belongs to Team Cherry
